total expenses calculation done

--- a/index.html
+++ b/index.html
@@ -44,21 +44,21 @@
                 <h3 class="fw-bold mx-auto">Expenses</h3>
                 <div class="d-flex justify-content-between px-5 mx-5 my-1">
                     <h4>Food:&nbsp;</h4>
-                    <input type="text">
+                    <input id="foodExpense" class="input" type="text" value="00">
                 </div>
                 <div class="d-flex justify-content-between px-5 mx-5 my-1">
                     <h4>Rent:&nbsp;</h4>
-                    <input type="text">
+                    <input id="rentExpense" class="input" type="text" value=00>
                 </div>
                 <div class="d-flex justify-content-between px-5 mx-5 my-1">
                     <h4>Clothes:&nbsp;</h4>
-                    <input type="text">
+                    <input id="clotheExpense" class="input" type="text" value="00">
                 </div>
                 <!-- calculate button -->
-                <button class="btn btn-primary mx-5 my-3">Calculate</button>
+                <button id="calc-btn" class="btn btn-primary mx-5 my-3">Calculate</button>
                 <!-- output of the calculation -->
                 <div class="text-center">
-                    <h3>Total Expence: $<span></span></h3>
+                    <h3>Total Expence: $<span id="total-expense"></span></h3>
                     <h3>Remaining Balance: $<span></span></h3>
                 </div>
             </div>
