--- a/index.html
+++ b/index.html
@@ -23,47 +23,62 @@
     <!-- header start -->
     <header class="container p-5">
         <!-- title -->
-        <h1 class="text-center">Expense Calculator</h3>
+        <h1 class="fw-bold text-center">Expense Calculator</h3>
     </header>
     <!-- header end -->
     <!-- main start -->
     <main class="container">
-        <section class="row gx-5">
+        <section class="row d-flex justify-content-between">
             <!-- image -->
-            <img class="col-6 img-fluid" src="images/closeup-shot-entrepreneur-working-from-home-his-personal-finances-savings.jpg"
-                alt="">
+            <img class="col-12 col-lg-6"
+                src="images/closeup-shot-entrepreneur-working-from-home-his-personal-finances-savings.jpg" alt="">
             <!-- calculator -->
-            <div class="col-6 d-flex flex-column justify-content-around px-5">
+            <div class="col-12 col-lg-4 d-flex flex-column">
                 <!-- income section -->
-                <h3  class="fw-bold mx-auto">Income</h3>
-                <div class="d-flex justify-content-between px-5 mx-5 my-1">
+                <h3 class="fw-bold mx-auto">Income</h3>
+                <div class="d-flex justify-content-between my-2">
                     <h4>Income:&nbsp;</h4>
-                    <input id="income" type="text">
+                    <input class="border border-1 border-primary" id="income" type="text">
                 </div>
                 <!-- expenses section -->
                 <h3 class="fw-bold mx-auto">Expenses</h3>
-                <div class="d-flex justify-content-between px-5 mx-5 my-1">
+                <div class="d-flex justify-content-between my-2">
                     <h4>Food:&nbsp;</h4>
-                    <input id="foodExpense" type="text">
+                    <input class="border border-1 border-primary" id="foodExpense" type="text">
                 </div>
-                <div class="d-flex justify-content-between px-5 mx-5 my-1">
+                <div class="d-flex justify-content-between my-2">
                     <h4>Rent:&nbsp;</h4>
-                    <input id="rentExpense" type="text">
+                    <input class="border border-1 border-primary" id="rentExpense" type="text">
                 </div>
-                <div class="d-flex justify-content-between px-5 mx-5 my-1">
+                <div class="d-flex justify-content-between my-2">
                     <h4>Clothes:&nbsp;</h4>
-                    <input id="clotheExpense" type="text">
+                    <input class="border border-1 border-primary" id="clotheExpense" type="text">
                 </div>
                 <!-- calculate button -->
                 <button id="calc-btn" class="btn btn-primary mx-5 my-3">Calculate</button>
                 <!-- output of the calculation -->
                 <div class="text-center">
                     <h3>Total Expence: $<span id="total-expense"></span></h3>
-                    <h3>Remaining Balance: $<span id="remaining-balance"></span></h3>
+                    <h3>Balance: $<span id="balance"></span></h3>
+                </div>
+                <!-- save section -->
+                <div>
+                    <!-- calculatuin part -->
+                    <div class="d-flex justify-content-around my-3">
+                        <h4>Save</h4>
+                        <input class="border border-1 border-primary" id="saving-persentage" type="text">
+                        <h4>%</h4>
+                        <!-- save button -->
+                        <button id="save-btn" class="btn btn-primary">Save</button>
+                    </div>
+                    <!-- output -->
+                    <div class="text-center">
+                        <h3>Saving Amount: $<span id="saving-amount"></span></h3>
+                        <h3>Remaining Balance: $<span id="remaining-balance"></span></h3>
+                    </div>
                 </div>
             </div>
         </section>
-
     </main>
     <!-- js -->
     <script src="js/index.js"></script>
