--- a/index.html
+++ b/index.html
@@ -10,12 +10,6 @@
     <!-- bootsrtap -->
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet"
         integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
-    <!-- google font -->
-    <link rel="preconnect" href="https://fonts.googleapis.com">
-    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-    <link
-        href="https://fonts.googleapis.com/css2?family=Rubik:ital,wght@0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,300;1,400;1,500;1,600;1,700;1,800;1,900&display=swap"
-        rel="stylesheet">
     <title>Expence Calculator</title>
 </head>
 
@@ -31,28 +25,28 @@
         <section class="row d-flex justify-content-between">
             <!-- image -->
             <img class="col-12 col-lg-6"
-                src="images/closeup-shot-entrepreneur-working-from-home-his-personal-finances-savings.jpg" alt="">
+                src="images/closeup-shot-entrepreneur-working-from-home-his-personal-finances-savings-min.jpg" alt="">
             <!-- calculator -->
             <div class="col-12 col-lg-4 d-flex flex-column">
                 <!-- income section -->
                 <h3 class="fw-bold mx-auto">Income</h3>
                 <div class="d-flex justify-content-between my-2">
                     <h4>Income:&nbsp;</h4>
-                    <input class="border border-1 border-primary" id="income" type="text">
+                    <input class="border border-1 border-primary" id="income" type="text" value="0">
                 </div>
                 <!-- expenses section -->
                 <h3 class="fw-bold mx-auto">Expenses</h3>
                 <div class="d-flex justify-content-between my-2">
                     <h4>Food:&nbsp;</h4>
-                    <input class="border border-1 border-primary" id="foodExpense" type="text">
+                    <input class="border border-1 border-primary" id="foodExpense" type="text" value="0">
                 </div>
                 <div class="d-flex justify-content-between my-2">
                     <h4>Rent:&nbsp;</h4>
-                    <input class="border border-1 border-primary" id="rentExpense" type="text">
+                    <input class="border border-1 border-primary" id="rentExpense" type="text" value="0">
                 </div>
                 <div class="d-flex justify-content-between my-2">
                     <h4>Clothes:&nbsp;</h4>
-                    <input class="border border-1 border-primary" id="clotheExpense" type="text">
+                    <input class="border border-1 border-primary" id="clotheExpense" type="text" value="0">
                 </div>
                 <!-- calculate button -->
                 <button id="calc-btn" class="btn btn-primary mx-5 my-3">Calculate</button>
@@ -63,10 +57,10 @@
                 </div>
                 <!-- save section -->
                 <div>
-                    <!-- calculatuin part -->
+                    <!-- calculation part -->
                     <div class="d-flex justify-content-around my-3">
                         <h4>Save</h4>
-                        <input class="border border-1 border-primary" id="saving-persentage" type="text">
+                        <input class="border border-1 border-primary" id="saving-persentage" type="text" value="0">
                         <h4>%</h4>
                         <!-- save button -->
                         <button id="save-btn" class="btn btn-primary">Save</button>
@@ -87,5 +81,4 @@
         integrity="sha384-ka7Sk0Gln4gmtz2MlQnikT1wXgYsOg+OMhuP+IlRH9sENBO0LRn5q+8nbTov4+1p"
         crossorigin="anonymous"></script>
 </body>
-
 </html>
