saving bug fixed

--- a/index.html
+++ b/index.html
@@ -52,8 +52,8 @@
                 <button id="calc-btn" class="btn btn-primary mx-5 my-3">Calculate</button>
                 <!-- output of the calculation -->
                 <div class="text-center">
-                    <h3>Total Expence: $<span id="total-expense"></span></h3>
-                    <h3>Balance: $<span id="balance"></span></h3>
+                    <h3>Total Expence: $<span id="total-expense">00</span></h3>
+                    <h3>Balance: $<span id="balance">00</span></h3>
                 </div>
                 <!-- save section -->
                 <div>
@@ -67,8 +67,8 @@
                     </div>
                     <!-- output -->
                     <div class="text-center">
-                        <h3>Saving Amount: $<span id="saving-amount"></span></h3>
-                        <h3>Remaining Balance: $<span id="remaining-balance"></span></h3>
+                        <h3>Saving Amount: $<span id="saving-amount">00</span></h3>
+                        <h3>Remaining Balance: $<span id="remaining-balance">00</span></h3>
                     </div>
                 </div>
             </div>
